istio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: prod-app
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
