istio/jaeger.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - telemetry-gateway
  http:
  - match:
    - uri:
        prefix: /jaeger
    rewrite:
      uri: /
    route:
    - destination:
        host: tracing
        port:
          number: 16686
