istio/kiali-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - telemetry-gateway
  http:
  - match:
    - uri:
        prefix: /kiali
    rewrite:
      uri: /
    route:
    - destination:
        host: kiali
        port:
          number: 20001
