istio/prometheus-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - telemetry-gateway
  http:
  - match:
    - uri:
        prefix: /prometheus
    rewrite:
      uri: /
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
