istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
  namespace: prod-app
spec:
  hosts:
  - nginx
  http:
  - route:
    - destination:
        host: nginx
        subset: v1
      weight: 100
    - destination:
        host: nginx
        subset: v2
      weight: 0
